--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -49,13 +49,17 @@
         <!--Carga el modulo creado-->
         <script src="src/app.js" type="text/javascript"></script>
 
-
         <link href="resources/assets/style.css" rel="stylesheet" type="text/css"/>
 
         <!--Recuerdos-->
         <script src="resources/js/traffic.js"></script>
         <script src="resources/js/imgcrr.js"></script>
-
+        <!--Crea la barra vertical de navegción del slider en Recuerdos-->
+        <link href="resources/css/sliderBarra.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/dynamic.css" rel="stylesheet">
+        <script type="text/javascript" src="resources/js/jssor.slider.min.js"></script>
+        <script src="resources/assets/wow/jquery.js"></script>
+        <script src = "resources/assets/bootstrap/js/bootstrap.js"></script>
 
 
     </head>
@@ -78,7 +82,7 @@
                                 <li><a ui-sref="verContinentes">Itinerarios</a></li>
                                 <li><a ui-sref="evento">Recordatorios</a></li>
                                 <li><a ui-sref="evento">Ajustes</a></li>
-                                <li><a ui-sref="crearRecuerdo">Recuerdos</a></li>
+                                <li><a ui-sref="recuerdo">Recuerdos</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
