--- a/punajut/src/main/webapp/src/Pagina de inicio/paginaDeInicio.tpl.html
+++ b/punajut/src/main/webapp/src/Pagina de inicio/paginaDeInicio.tpl.html
@@ -1,47 +1,4 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>Gotravel</title>
-    <link href="../../resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-    <link href="../../resources/css/carousel.css" rel="stylesheet" type="text/css"/>
-    <link href="../../resources/css/starter-template.css" rel="stylesheet" type="text/css"/>
-  </head>
-  <body>
--->
-
-    <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-      <a href="#" class="navbar-brand">GoTravel</a>
-      <ul class="nav navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#myCarousel">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#resumen">Descripción</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#viaja">Viaja</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#crea">Crea</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#comparte">Comparte</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#signin">Sign in</a>
-        </li>
-      </ul>
-    </nav>
-
-    <!-- Carousel
-    ================================================== -->
+<div>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -155,7 +112,7 @@
         </div>
       </div>
 
-            <hr class="featurette-divider">
+      <hr class="featurette-divider">
 
       <div data-role="footer">
           <footer>
@@ -163,82 +120,6 @@
             <p>&copy; 2016 GoTravel, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
           </footer>
       </div>
-    </div><!-- /.container -->
+    </div>
 
-
-
-    <div class="container" id="signup">
-
-        <form class="form-signin">
-          <h2 class="form-signin-heading">Please Sign Up</h2>
-
-          <label for="inputNickname" class="sr-only">nickname</label>
-          <input type="text" id="inputNickname" class="form-control" placeholder="nickname" required>
-
-          <label for="inputname" class="sr-only">name</label>
-          <input type="text" id="inputname" class="form-control" placeholder="name" required>
-
-          <label for="inputlastname" class="sr-only">lastname</label>
-          <input type="text" id="inputlastname" class="form-control" placeholder="lastname" required>
-
-          <label for="inputinfo" class="sr-only">info</label>
-          <input type="text" id="inputinfo" class="form-control" placeholder="tell us something about you" required>
-
-          <label for="inputEmail" class="sr-only">Email address</label>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          <label for="inputPassword" class="sr-only">Password</label>
-          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-          <label for="inputPassword2" class="sr-only">Password</label>
-          <input type="password" id="inputPassword2" class="form-control" placeholder="Confirm Password" required>
-
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        </form>
-
-
-      </div> <!-- /container -->
-      <hr class="featurette-divider">
-    <div data-role="footer">
-          <footer>
-            <p class="pull-xs-right"><a href="#pageone">Back to Home</a></p>
-            <p>&copy; 2016 GoTravel, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-          </footer>
-      </div>
-
-    <div class="container" id="signin">
-    <center>
-          <form class="form-signin">
-            <h2 class="form-signin-heading">Please sign in</h2>
-           <label for="inputEmail" class="sr-only">Email address</label>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          <label for="inputPassword" class="sr-only">Password</label>
-          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-            </form>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" value="remember-me"> Remember me
-              </label>
-            </div>
-            <form class="form-signin">
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-          </form>
-    </center>
-        </div> <!-- /container -->
-      <hr class="featurette-divider">
-    <div data-role="footer">
-          <footer>
-            <p class="pull-xs-right"><a href="#pageone">Back to Home</a></p>
-            <p>&copy; 2016 GoTravel, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-          </footer>
-      </div>
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-
-    <script src="../../resources/js/jquery.min.js" type="text/javascript"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="../../resources/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="../../resources/js/holder.min.js" type="text/javascript"></script>
-    <script src="../../resources/js/ie10-viewport-bug-workaround.js" type="text/javascript"></script>
-  </body>
-</html>
+</div>>
