--- a/punajut/src/main/webapp/src/crearRecuerdo/crearRecuerdo.tpl.html
+++ b/punajut/src/main/webapp/src/crearRecuerdo/crearRecuerdo.tpl.html
@@ -91,7 +91,7 @@
     });
 </script>
 
-
+        <!-- Ya importados en el index
         <script src="../../resources/assets/wow/jquery.js"></script>
-        <script src = "../../resources/assets/bootstrap/js/bootstrap.js"></script>
+        <script src = "../../resources/assets/bootstrap/js/bootstrap.js"></script>-->
 </div>
