--- a/punajut/src/main/webapp/src/crearRecuerdo/misRecuerdos.html
+++ b/punajut/src/main/webapp/src/crearRecuerdo/misRecuerdos.html
@@ -305,6 +305,6 @@
             </div>
 
         </div>
-
-        <script src="../../resources/assets/wow/jquery.js"></script>
-        <script src = "../../resources/assets/bootstrap/js/bootstrap.js"></script>
+        <!--Ya importados en el index-->
+       <!-- <script src="../../resources/assets/wow/jquery.js"></script>
+        <script src = "../../resources/assets/bootstrap/js/bootstrap.js"></script>-->
