--- a/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
@@ -1,5 +1,5 @@
 <div ng-init="list = true">
-    <div class="container">
+    <div  class="container">
         <div class="row profile">
             <div class="col-md-3">
                 <div class="profile-sidebar">
@@ -49,7 +49,7 @@
                 </div>
                 <!-- END MENU -->
             </div>
-            <div class="col-md-9">
+            <div class="col-md-9" ng-if="list">
                 <div id="works"  class=" clearfix grid">
                     <figure class="effect-oscar  wowload fadeIn">
 
@@ -67,7 +67,7 @@
                         <figcaption>
                             <h2>Europa</h2>
                             <p>La cuna de la civilizacion occidental<br>
-                                <a href="src/itinerario/verEuropa.html" title="1" data-gallery>Mas</a></p>
+                                <a title="1" data-gallery ng-show="list" ng-click="list = false">Mas</a></p>
                         </figcaption>
                     </figure>
                     <figure class="effect-oscar  wowload fadeIn">
@@ -108,5 +108,61 @@
             </div>
         </div>
     </div>
+
+    <div ng-if="!list" class="well">
+        <div class="col-md-9">
+            <div id="works"  class=" clearfix grid">
+                <figure class="effect-oscar  wowload fadeIn">
+                    <img src="resources/imagenes/Inglaterra.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2>Inglaterra</h2>
+                        <p>Conoce a la reina<br>
+                            <a href="src/evento/verContinentes.html" title="1" data-gallery>Mas</a></p>
+                    </figcaption>
+                </figure>
+                <figure class="effect-oscar  wowload fadeIn">
+                    <img src="resources/imagenes/Francia.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2>Francia</h2>
+                        <p>Donde se encuentra ciudad del amor<br>
+                            <a href="src/evento/verContinentes.html" title="1" data-gallery>Mas</a></p>
+                    </figcaption>
+                </figure>
+                <figure class="effect-oscar  wowload fadeIn">
+                    <img src="resources/imagenes/Grecia.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2>Grecia</h2>
+                        <p>???<br>
+                            <a href="../../src/evento/verContinentes.html" title="1" data-gallery>Mas</a></p>
+                    </figcaption>
+                </figure>
+                <figure class="effect-oscar  wowload fadeIn">
+                    <img src="resources/imagenes/Italia.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2>Italia</h2>
+                        <p>??? <br>
+                            <a href="../../src/evento/verContinentes.html" title="1" data-gallery>Mas</a></p>
+                    </figcaption>
+                </figure>
+                <figure class="effect-oscar  wowload fadeIn">
+                    <img src="resources/imagenes/Alemania.jpg" alt="img01"/>
+                    <figcaption>
+                        <h3>Alemania</h3>
+                        <p>???<br>
+                            <a href="./../src/evento/verContinentes.html" title="1" data-gallery>Mas</a></p>
+                    </figcaption>
+                </figure>
+                <figure class="effect-oscar  wowload fadeIn">
+                    <img src="resources/imagenes/España.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2>España</h2>
+                        <p>???<br>
+                            <a href="./../src/evento/verContinentes.html" title="1" data-gallery>Mas</a></p>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
 </div>
+
 
